--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Maten",
   "short_name": "Maten",
   "description": "Recipe, Dinner Planning and Shopping List App",
-  "start_url": "/",
+  "start_url": "https://mat.hanshenrik.com/",
   "display": "standalone",
   "background_color": "#F7FAFC",
   "theme_color": "#4299E1",
